<resources>
    <string name="app_name">Local Review</string>
    <string name="action_re">Local Reviewer</string>
    <string name="action_report">Report</string>
    <string name="reTitle">Welcome Reviewer</string>
    <string name="reSubtitle">Please give details of your experience to help others </string>
    <string name="reName">Name of Server </string>
    <string name="reLocation">Location </string>
    <string name="reServices">Service </string>
    <string name="rePrice">Price Paid </string>
    <string name="reRating">Rating out of 5 </string>
    <string name="reAtHome">Do they do home visits? </string>
    <string name="reButton">Submit</string>
    <string name="home">YES</string>
    <string name="nohome">NO</string>
    <string name="amount">Rating</string>
    <string name="total">Rating:</string>
    <string name="totalSoFar">Total</string>
    <string name="reportTitle">All Reviews</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_service">Enter Service</string>
    <string name="enter_location">Enter Location</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Review</string>
    <string name="nav_header_subtitle">Be Honest Help Others</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_re">Submit Review</string>
    <string name="menu_report">All</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
